[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/TileSets/Foreground.tres" type="TileSet" id=1]
[ext_resource path="res://assets/TileSets/Details.tres" type="TileSet" id=2]
[ext_resource path="res://player/PlayerAnimations.tres" type="SpriteFrames" id=8]
[ext_resource path="res://UI/start-screen/StartScreenUI.tscn" type="PackedScene" id=9]
[ext_resource path="res://assets/Sprites/background.png" type="Texture" id=10]
[ext_resource path="res://levels/StartScreen/StartScreen.gd" type="Script" id=11]
[ext_resource path="res://assets/Sound/8bit 8pack/Quiet Village.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/TileSets/Background.tres" type="TileSet" id=13]

[sub_resource type="Animation" id=15]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera2D:offset:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/StartScreenUI:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("AnimatedSprite:offset:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=14]
resource_name = "StartScreenAnimation"
length = 6.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Camera2D:offset:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 600, -0.25, 0, 0, 0, 0, -2, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("CanvasLayer/StartScreenUI:modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 5, 6 )
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.5, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "walking", "idle" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimatedSprite:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1.5, 3, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, true ]
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("AnimatedSprite:offset:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( -250, -0.25, 0, 0, 0, 0, -0.5, 0, 0.25, 0 ),
"times": PoolRealArray( 1.5, 3 )
}

[node name="StartScreen" type="Node2D"]
script = ExtResource( 11 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 13 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 131064, 1, 0, 131066, 536870912, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Foreground" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( -262151, 39, 0, -196615, 40, 0, -196614, 39, 0, -131079, 40, 0, -131078, -1610612736, 0, -65543, 40, 0, -65542, 40, 0, -65541, 39, 0, -7, 40, 0, -6, 40, 0, -5, 40, 0, -4, 39, 0, 65529, 40, 0, 65530, 40, 0, 65531, 40, 0, 65532, -1610612697, 0, 196601, 40, 0, 196602, 40, 0, 196603, 40, 0, 196604, 39, 0, 262137, 40, 0, 262138, 40, 0, 262139, 40, 0, 262140, -1610612736, 0, 327673, 40, 0, 327674, 40, 0, 327675, 40, 0, 327676, 40, 0, 327677, 39, 0, 393209, 40, 0, 393210, 40, 0, 393211, 40, 0, 393212, 40, 0, 393213, 40, 0, 393214, 39, 0, 458745, 40, 0, 458746, 40, 0, 458747, 40, 0, 458748, 40, 0, 458749, 40, 0, 458750, 40, 0, 458751, 39, 0, 524281, 40, 0, 524282, 40, 0, 524283, 40, 0, 524284, 40, 0, 524285, 40, 0, 524286, 40, 0, 524287, -1610612736, 0, 589817, 40, 0, 589818, 40, 0, 589819, 40, 0, 589820, 40, 0, 589821, 40, 0, 589822, 40, 0, 589823, 40, 0, 524288, 39, 0, 655353, 40, 0, 655354, 40, 0, 655355, 40, 0, 655356, 40, 0, 655357, 40, 0, 655358, 40, 0, 655359, 40, 0, 589824, -1610612736, 0, 720889, 40, 0, 720890, 40, 0, 720891, 40, 0, 720892, 40, 0, 720893, 40, 0, 720894, 40, 0, 720895, 40, 0, 655360, -1610612736, 0, 786425, 40, 0, 786426, 40, 0, 786427, 40, 0, 786428, 40, 0, 786429, 40, 0, 786430, 40, 0, 786431, 40, 0, 720896, 40, 0, 720897, 39, 0, 851961, 40, 0, 851962, 40, 0, 851963, 40, 0, 851964, 40, 0, 851965, 40, 0, 851966, 40, 0, 851967, 40, 0, 786432, 40, 0, 786433, -1610612736, 0, 917497, 40, 0, 917498, 40, 0, 917499, 40, 0, 917500, 40, 0, 917501, 40, 0, 917502, 40, 0, 917503, 40, 0, 851968, 40, 0, 851969, -1610612736, 0 )
__meta__ = {
"_edit_lock_": true
}

[node name="Details" type="TileMap" parent="."]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
collision_layer = 0
collision_mask = 0
format = 1
tile_data = PoolIntArray( 262137, 48, 0, 262138, 48, 1, 262139, 48, 1, 262140, 48, 1, 262141, 48, 1, 262142, 48, 1, 262143, 48, 1, 196608, 48, 1, 196609, 48, 1, 196610, 48, 1, 196611, 48, 1, 196612, 48, 1, 196613, 48, 1, 196614, 48, 1, 196615, 48, 1, 196616, 48, 1, 196617, 48, 1, 196618, 48, 1, 196619, 48, 1, 196620, 48, 1, 196621, 48, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.7, 0.7 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -232, 112 )
frames = ExtResource( 8 )
animation = "idle"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StartScreenUI" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2( 0, 0 )

[node name="Sky" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 10 )
flip_h = true
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "StartScreenAnimation"
anims/RESET = SubResource( 15 )
anims/StartScreenAnimation = SubResource( 14 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -12.0
autoplay = true

[connection signal="exitGame" from="CanvasLayer/StartScreenUI" to="." method="_on_StartScreenUI_exitGame"]
[connection signal="startGame" from="CanvasLayer/StartScreenUI" to="." method="_on_StartScreenUI_startGame"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
